unpackaged/main/default/objects/Contact/fields/Account_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Account_GDPR__c</fullName>
    <formula>TEXT(Account.GDPR__c) &amp; &quot; &quot; &amp; TEXT(Account.Parent.GDPR__c) &amp; &quot; &quot; &amp; TEXT( Account.Parent.Parent.GDPR__c)</formula>
    <label>Account GDPR</label>
    <type>Text</type>
</CustomField>