unpackaged/main/default/objects/Contact/fields/ADA__c.field-meta.xml
<CustomField>
    <fullName>ADA__c</fullName>
    <formula>IF(TODAY()- LastActivityDate &lt;=  60, 4,
IF(AND(TODAY()- LastActivityDate &lt;= 90, TODAY()- LastActivityDate &gt; 60), 3,
IF(AND(TODAY()- LastActivityDate &lt;= 180, TODAY()- LastActivityDate &gt; 90), 2,
IF(AND(TODAY()- LastActivityDate &lt;= 365, TODAY()- LastActivityDate &gt; 180), 1,
IF(TODAY()- LastActivityDate &gt; 365, 0.5, 0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>