unpackaged/main/default/objects/Contact/fields/Company_Sector_Account__c.field-meta.xml
<CustomField>
    <fullName>Company_Sector_Account__c</fullName>
    <formula>TEXT(Account.Company_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Sector (Account)</label>
    <type>Text</type>
</CustomField>