unpackaged/main/default/objects/Contact/fields/Contact_From_Group_Company__c.field-meta.xml
<CustomField>
    <fullName>Contact_From_Group_Company__c</fullName>
    <label>Contact From Group Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Datatrans</fullName>
            </value>
            <value>
                <fullName>Hoist</fullName>
            </value>
            <value>
                <fullName>Planet</fullName>
            </value>
            <value>
                <fullName>Protel</fullName>
            </value>
            <value>
                <fullName>Proximis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>