unpackaged/main/default/objects/Contact/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <description>This field can be used for Standard Mobile  field displays normal number formal not splitted to strings.</description>
    <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(MobilePhone, &#39;.&#39;, &#39;&#39;) , &#39; &#39;, &#39;&#39;) , &#39;-&#39;, &#39;&#39;) , &#39;)&#39;, &#39;&#39;) , &#39;(&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile</label>
    <type>Text</type>
</CustomField>