unpackaged/main/default/objects/Contact/fields/Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Contact_Roles__c</fullName>
    <label>Contact Roles</label>
    <type>TextArea</type>
</CustomField>