unpackaged/main/default/objects/Contact/fields/ContactId_x18__c.field-meta.xml
<CustomField>
    <fullName>ContactId_x18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactId(x18)</label>
    <type>Text</type>
</CustomField>