unpackaged/main/default/objects/Contact/fields/Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Owner</label>
    <type>Checkbox</type>
</CustomField>