unpackaged/main/default/objects/Contact/fields/DCC_Influence_Level__c.field-meta.xml
<CustomField>
    <fullName>DCC_Influence_Level__c</fullName>
    <inlineHelpText>1 - Owns DCC and will recommend supplier 
2 - Really strong input for decision 
3 - Can influence decision makes to a degree 
4 - Very little influence or involvement</inlineHelpText>
    <label>DCC Influence Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>