unpackaged/main/default/objects/Contact/fields/DCC_Influence_Level_Adj__c.field-meta.xml
<CustomField>
    <fullName>DCC_Influence_Level_Adj__c</fullName>
    <formula>IF(VALUE(TEXT(DCC_Influence_Level__c)) = 1, 4,
IF(VALUE(TEXT(DCC_Influence_Level__c)) = 2, 3,
IF(VALUE(TEXT(DCC_Influence_Level__c)) = 3, 2,
IF(VALUE(TEXT(DCC_Influence_Level__c)) = 4, 1, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC Influence Level Adj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>