unpackaged/main/default/objects/Contact/fields/GDPR_Group_Company__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Group_Company__c</fullName>
    <label>GDPR Group Company</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Datatrans</fullName>
            </value>
            <value>
                <fullName>Hoist</fullName>
            </value>
            <value>
                <fullName>Planet</fullName>
            </value>
            <value>
                <fullName>Protel</fullName>
            </value>
            <value>
                <fullName>Proximis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>