unpackaged/main/default/objects/Contact/fields/If_Other_Please_Specify__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Please_Specify__c</fullName>
    <inlineHelpText>Please use English</inlineHelpText>
    <label>If Other Please Specify</label>
    <length>66</length>
    <type>Text</type>
</CustomField>