unpackaged/main/default/objects/Contact/fields/IKA__c.field-meta.xml
<CustomField>
    <fullName>IKA__c</fullName>
    <formula>TEXT(Account.IKA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IKA</label>
    <type>Text</type>
</CustomField>