unpackaged/main/default/objects/Contact/fields/Influence_Score__c.field-meta.xml
<CustomField>
    <fullName>Influence_Score__c</fullName>
    <formula>(25 * TF_Influence_Level_Adj__c * ADA__c) + (25 * DCC_Influence_Level_Adj__c * ADA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influence Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>