unpackaged/main/default/objects/Contact/fields/IT_Outage__c.field-meta.xml
<CustomField>
    <fullName>IT_Outage__c</fullName>
    <label>IT Outage Contact For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PAOL</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>POL</fullName>
            </value>
            <value>
                <fullName>POL Pro</fullName>
            </value>
            <value>
                <fullName>POL Pro PAX</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>PT PAX</fullName>
            </value>
            <value>
                <fullName>eTF</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>