unpackaged/main/default/objects/Contact/fields/Key_Planet_Relationship_Owner__c.field-meta.xml
<CustomField>
    <fullName>Key_Planet_Relationship_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Shop Contacts tick this for In-store Communication</inlineHelpText>
    <label>Key Planet Relationship Owner</label>
    <type>Checkbox</type>
</CustomField>