unpackaged/main/default/objects/Contact/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>Salesforce Ticket - https://planet.atlassian.net/browse/SFHD-18 - Saurabh 20/04/2022</description>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>