unpackaged/main/default/objects/Contact/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>This field can be used for combination of Call image and Contact Mobile</description>
    <formula>Call__c + Contact_Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>