unpackaged/main/default/objects/Contact/fields/NKA__c.field-meta.xml
<CustomField>
    <fullName>NKA__c</fullName>
    <formula>TEXT( Account.NKA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NKA</label>
    <type>Text</type>
</CustomField>