unpackaged/main/default/objects/Contact/fields/No_Relationship__c.field-meta.xml
<CustomField>
    <fullName>No_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if contact has no relationship to Planet.  If the Last Name is not known then enter &#39;Unknown&#39; in the Last Name field.</inlineHelpText>
    <label>No Relationship</label>
    <type>Checkbox</type>
</CustomField>