unpackaged/main/default/objects/Contact/fields/Parent_Account_On_Boarding__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_On_Boarding__c</fullName>
    <formula>TEXT(Account.Parent.On_Boarding__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account On Boarding</label>
    <type>Text</type>
</CustomField>