unpackaged/main/default/objects/Contact/fields/Planet_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if the contact should receive Planet Intelligence.</inlineHelpText>
    <label>Planet Intelligence</label>
    <type>Checkbox</type>
</CustomField>