unpackaged/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Administration Manager</fullName>
            </value>
            <value>
                <fullName>Area Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Brand Manager</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO (Europe)</fullName>
            </value>
            <value>
                <fullName>CFO (Group)</fullName>
            </value>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Chief Marketing Officer</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>Commercial Director</fullName>
            </value>
            <value>
                <fullName>Commercial Manager</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Corporate Office</fullName>
            </value>
            <value>
                <fullName>Country Director</fullName>
            </value>
            <value>
                <fullName>CRM Manager</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Internal Control Manager</fullName>
            </value>
            <value>
                <fullName>Finance Controller</fullName>
            </value>
            <value>
                <fullName>Finance Director</fullName>
            </value>
            <value>
                <fullName>Front Office Manager</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Head of Retail</fullName>
            </value>
            <value>
                <fullName>Head of Risk and Compliance</fullName>
            </value>
            <value>
                <fullName>Head of Sales</fullName>
            </value>
            <value>
                <fullName>Head of Training and Development</fullName>
            </value>
            <value>
                <fullName>HR Director</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>IT Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>