unpackaged/main/default/objects/Contact/fields/Relationship_Count__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Count__c</fullName>
    <label>Relationship Count</label>
    <summarizedField>Relationship_Details__c.Relationship_Count__c</summarizedField>
    <summaryForeignKey>Relationship_Details__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>