unpackaged/main/default/objects/Contact/fields/Relationship_Score_Total__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Score_Total__c</fullName>
    <label>Relationship Score Total</label>
    <summarizedField>Relationship_Details__c.Relationship_Score__c</summarizedField>
    <summaryForeignKey>Relationship_Details__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>