unpackaged/main/default/objects/Contact/fields/SSCard__c.field-meta.xml
<CustomField>
    <fullName>SSCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SSCard</label>
    <referenceTo>sansancard__SSCard__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>