unpackaged/main/default/objects/Contact/fields/Subscribed_Reports__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Reports__c</fullName>
    <label>Subscribed Reports</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0072-Top Stores</fullName>
            </value>
            <value>
                <fullName>0095-Store Statistics Report Suite</fullName>
            </value>
            <value>
                <fullName>0109-Top Nationalities LS</fullName>
            </value>
            <value>
                <fullName>0210-Voucher Listing</fullName>
            </value>
            <value>
                <fullName>0416a-March Rate Evolution</fullName>
            </value>
            <value>
                <fullName>0575-Code 99 Sales Reps</fullName>
            </value>
            <value>
                <fullName>1001-Summary Performance Report</fullName>
            </value>
            <value>
                <fullName>3C Communication</fullName>
            </value>
            <value>
                <fullName>China Talks Newsletter</fullName>
                <label>Communication Central Europe</label>
            </value>
            <value>
                <fullName>France Newsletter</fullName>
            </value>
            <value>
                <fullName>Group Performance Report EMEA</fullName>
            </value>
            <value>
                <fullName>Group Performance Report France</fullName>
            </value>
            <value>
                <fullName>Group Performance Report Italy</fullName>
            </value>
            <value>
                <fullName>Group Performance Report Spain</fullName>
            </value>
            <value>
                <fullName>KaufLokal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>