unpackaged/main/default/objects/Contact/fields/Subscriber_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Status__c</fullName>
    <inlineHelpText>Applies to Planet Intelligence Subscription Only</inlineHelpText>
    <label>Subscriber Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Suppressed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>