unpackaged/main/default/objects/Contact/fields/Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation__c</fullName>
    <label>Survey Invitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training Survey: ISTP Complete</fullName>
            </value>
            <value>
                <fullName>Planet Intelligence Survey</fullName>
            </value>
            <value>
                <fullName>Onboarding Survey</fullName>
            </value>
            <value>
                <fullName>Training Survey: Store Staff</fullName>
            </value>
            <value>
                <fullName>Training Survey: Mystery Shopping</fullName>
            </value>
            <value>
                <fullName>Training Survey: ISTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>