unpackaged/main/default/objects/Contact/fields/T_tulo__c.field-meta.xml
<CustomField>
    <fullName>T_tulo__c</fullName>
    <label>Título</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exmo. Sr.</fullName>
            </value>
            <value>
                <fullName>Exma. Sra.</fullName>
            </value>
            <value>
                <fullName>Exmo. Dr.</fullName>
            </value>
            <value>
                <fullName>Exma. Dra.</fullName>
            </value>
            <value>
                <fullName>Exmo. Eng.</fullName>
            </value>
            <value>
                <fullName>Exma. Eng.ª</fullName>
            </value>
            <value>
                <fullName>Exmo. Arq.</fullName>
            </value>
            <value>
                <fullName>Exma. Arq.ª</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>