unpackaged/main/default/objects/Contact/fields/Titel__c.field-meta.xml
<CustomField>
    <fullName>Titel__c</fullName>
    <label>Titel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Herr</fullName>
            </value>
            <value>
                <fullName>Frau</fullName>
            </value>
            <value>
                <fullName>Herr Dr.</fullName>
            </value>
            <value>
                <fullName>Frau Dr.</fullName>
            </value>
            <value>
                <fullName>Herr Prof.</fullName>
            </value>
            <value>
                <fullName>Frau Prof.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>