unpackaged/main/default/objects/Contact/fields/Total_Contact_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Contact_Score__c</fullName>
    <formula>Influence_Score__c + Relationship_Score_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>