unpackaged/main/default/objects/Contact/fields/WeChat_Id__c.field-meta.xml
<CustomField>
    <fullName>WeChat_Id__c</fullName>
    <label>WeChat Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>