unpackaged/main/default/objects/Contact/validationRules/IT_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>IT_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Email = &quot;&quot;,  NOT(ISBLANK(IT_Outage__c)))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>An IT Outage contact must have an email address.</errorMessage>
</ValidationRule>