unpackaged/main/default/objects/Contact/validationRules/Linked_In_User_Contacts.validationRule-meta.xml
<ValidationRule>
    <fullName>Linked_In_User_Contacts</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNEW(), CONTAINS(TEXT($User.Team__c), &quot;Linked&quot;))</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>As a LinkedIn Sales Navigator user you must enter the source of the new contact.</errorMessage>
</ValidationRule>