unpackaged/main/default/objects/Contact/validationRules/Other_Position.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Position</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Position__c) = &quot;Other&quot;,  If_Other_Please_Specify__c = &quot;&quot;, NOT(ISNEW()))</errorConditionFormula>
    <errorDisplayField>If_Other_Please_Specify__c</errorDisplayField>
    <errorMessage>Since &#39;Other&#39; has been selected as the Position you must specify the nature of the Contact&#39;s job or role in the account.</errorMessage>
</ValidationRule>