unpackaged/main/default/objects/Contact/validationRules/Premier_Vision.validationRule-meta.xml
<ValidationRule>
    <fullName>Premier_Vision</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Planet_Intelligence__c=TRUE, Email =&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Planet_Intelligence__c</errorDisplayField>
    <errorMessage>In order to receive Premier Vision a contact must have an e-mail address</errorMessage>
</ValidationRule>