unpackaged/main/default/objects/Contact/validationRules/Survey_with_No_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Survey_with_No_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Email), NOT(ISBLANK(TEXT(Survey_Invitation__c))))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>You cannot send a survey if the contact does not have an email address.</errorMessage>
</ValidationRule>