unpackaged/main/default/objects/Contact/listViews/Alipay_communication.listView-meta.xml
<ListView>
    <fullName>Alipay_communication</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owning_Country__c</field>
        <operation>equals</operation>
        <value>Italy</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>active</value>
    </filters>
    <filters>
        <field>Parent_Account_On_Boarding__c</field>
        <operation>equals</operation>
        <value>yes</value>
    </filters>
    <filters>
        <field>Position__c</field>
        <operation>notEqual</operation>
        <value>Vice-President</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>pec</value>
    </filters>
    <filters>
        <field>Account_ID__c</field>
        <operation>startsWith</operation>
        <value>ITS</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>bulgari,Sergio rossi,malo,stella mccartney,la cooperativa di cortina,Franz Kraler,salewa,morotto,cmp,centro casa,fk,stock house,philippe</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>adele,akiva,alessi,american vintage,anne fontaine,apm,au departe,cale,carlo pignatelli,castellani,chiara boni,cicli,coccinelle,coin,devi dfs,dna,dr martens,dylan,enclopius,epi,fintex,furla,gioielli di valenza,gucci,hag,isabel marant,ishop</value>
    </filters>
    <label>Alipay communication 1</label>
</ListView>