unpackaged/main/default/objects/Contact/listViews/Alipay_communication_2.listView-meta.xml
<ListView>
    <fullName>Alipay_communication_2</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owning_Country__c</field>
        <operation>equals</operation>
        <value>Italy</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>active</value>
    </filters>
    <filters>
        <field>Parent_Account_On_Boarding__c</field>
        <operation>equals</operation>
        <value>yes</value>
    </filters>
    <filters>
        <field>Position__c</field>
        <operation>notEqual</operation>
        <value>Vice-President</value>
    </filters>
    <filters>
        <field>Account_ID__c</field>
        <operation>notEqual</operation>
        <value>pec</value>
    </filters>
    <filters>
        <field>Account_ID__c</field>
        <operation>startsWith</operation>
        <value>ITS</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>bulgari,Sergio rossi,malo,stella mccartney,la cooperativa di cortina,Franz Kraler,salewa,morotto,cmp,centro casa,fk,stock house,philippe</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>leaos,loschi,luis,luxury,maltempi,marqa,menichini,modes,paul smith,pink,san gallo,scout,sergio rossi,spinnaker,ste.sa.mi,store 1.5,suit supply,tavanti,the swatch</value>
    </filters>
    <label>Alipay communication 2</label>
</ListView>